# zkgame

./: .gitignore  MATERIALS_GUIDE.md  PLAYABLE_README.md  PROOF_INTEGRATION.md  PROOF_INTEGRATION_FLOW.md  README.md  SETUP_GUIDE.md  clean-all.sh  clean-quick.sh  generate-keys.sh  hardhat.config.js  package-lock.json  package.json  start-game.sh
backend/: package-lock.json  package.json  server.js
cache/: solidity-files-cache.json
circuits/: movement.circom  timeCraft.circom  timeReward.circom
circuits/utils/: merkle.circom  poseidon.circom
cli/: Cargo.toml
cli/src/: main.rs
config/: circuits_config.json  game_constants.json  macro_map.json  recipes.json
contracts/: GameCore.sol  ProofVerifier.sol  StateManager.sol
deployments/: hardhat.json
docs/: holepunch-integration.md
frontend/: README.md  index.html  next.config.js  package-lock.json  package.json  uno.config.ts
frontend-backup/: next.config.js  package-lock.json  package.json  tailwind.config.js  uno.config.ts
frontend-backup/app/: globals.css  layout.tsx  page.tsx
frontend-backup/app/components/: Crafting.tsx  GameMap.tsx  PlayerStatus.tsx  StorageManager.tsx
frontend-backup/app/contexts/: SocketContext.tsx
frontend-backup/app/stores/: gameStore.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/src/: App.tsx  index.css
scripts/: compile-circuits.js  demo.js  deploy.js  generate-trusted-setup.js
test/circuits/: movement.test.js
test/contracts/: GameCore.test.js
test/integration/: full_workflow.test.js
test/vdf/: vdf_test.rs
vdf/: Cargo.toml
vdf/src/: lib.rs
(+34 files in other folders)
