[package]
name = "zkgame-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "zkgame"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
zkgame-vdf = { path = "../vdf" }
hex = "0.4"
sha2 = "0.10"
rand = "0.8"
dirs = "5.0"

[dev-dependencies]
tempfile = "3.0"
